--- a/app_server/views/contact.jade
+++ b/app_server/views/contact.jade
@@ -8,8 +8,8 @@ block content
         div.contact-info
           h2 Contact Information
           p Phone: +91 9963591908
-          p Email: wafflepark@cafe.com
-          p Address: 234 Food Avenue,Bengaluru.
+          p Email: myntra@shop.com
+          p Address: 234 Brundavan.Avenue,Bengaluru.
         div.contact-form
           h2 Send us a Message
           form(action="/contact", method="post")
