--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html(ng-app='wafflepark')
+html(ng-app='myntra')
 html
   head
     meta(name='Viewport', content='width=device-width',intial-scale=1.0)
@@ -13,7 +13,7 @@ html
     .navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
-          a.navbar-brand(href='/') Wafflepark
+          a.navbar-brand(href='/') myntra
           button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-main')
             span.icon-bar
             span.icon-bar
