--- a/app_server/views/menu.jade
+++ b/app_server/views/menu.jade
@@ -5,47 +5,47 @@ block content
     .row
       .col-lg-6
         h1
-          | Wafflepark
-          small &nbsp;Find some amazing waffles to devour of your choice
+          | Myntra
+          small &nbsp;Find some amazing  of your choice
   .row
     .col-xs-12.col-sm-8
       .row.list-group
         .col-xs-12.list-group-item
           h4
-            a(href='/darkchocolate') Darkchocolate
+            a(href='/earphones') Earphones
             small &nbsp;
               span.glyphicon-menu-hamburger
           p
-            span.label.label-warning may contain milk 
+            span.label.label-warning contain wires
             | &nbsp;
-            span.label.label-warning some dishes contain whitechocolate
+            span.label.label-warning wired
             | &nbsp;
-            span.label.label-warning your choice of seasoning
+            span.label.label-warning your choice of s
             | &nbsp;
         .col-xs-12.list-group-item
           h4
-            a(href='/whitechocolate') Whitechocolate
+            a(href='/dress') Dress
             small &nbsp;
               span.glyphicon-menu-hamburger
               
           p
-            span.label.label-warning may contain milk
+            span.label.label-warning polyster
             | &nbsp;
             span.label.label-warning your choice of seasoning
             | &nbsp;
-            span.label.label-warning vegan options
+            span.label.label-warning jeans
             | &nbsp;
         .col-xs-12.list-group-item
           h4
-            a(href='/milkchocolate') Milkchocolate
+            a(href='/shoe') Shoe
             small &nbsp;
               span.glyphicon-ice-lolly-tasted
               
           p
-            span.label.label-warning contains milk
+            span.label.label-warning sneakers
             | &nbsp;
-            span.label.label-warning may contain egg
+            span.label.label-warning canvas
             | &nbsp;
     .col-xs-12.col-sm-4
       p.lead
-        | Welcome to our culinary paradise, where flavors come alive and delight your senses. Our menu features a diverse range of waffles, each designed to cater to your taste preferences, our menu has something amazing to offer.
+        | Welcome to our myntra, where there are a lot of options for the shopping like dresses,shoes.
