--- a/app_server/views/error.jade
+++ b/app_server/views/error.jade
@@ -1,6 +1,8 @@
-extends layout
-
+extends layout // If you're extending a layout template
 block content
-  h1= message
   h2= error.status
   pre #{error.stack}
+  //- Use the 'title' variable here, e.g., in a title tag
+  title= title
+
+
