--- a/app_server/views/reservation.jade
+++ b/app_server/views/reservation.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
     section.reservation
-      h1 Reserve a Table
+      h1 Reserve a Page
       p To make a reservation, please provide the following details. Our team will get back to you to confirm your reservation.
       form(action="/reservation", method="post")
         div.form-group
@@ -14,13 +14,4 @@ block content
         div.form-group
           label(for="phone") Phone:
           input#phone.form-control(type="tel", name="phone", required)
-        div.form-group
-          label(for="date") Date:
-          input#date.form-control(type="date", name="date", required)
-        div.form-group
-          label(for="time") Time:
-          input#time.form-control(type="time", name="time", required)
-        div.form-group
-          label(for="guests") Number of Guests:
-          input#guests.form-control(type="number", name="guests", required)
-        button.btn.btn-primary(type="submit") Reserve Table
+         Reserve to page
