--- a/app_server/views/shoe.jade
+++ b/app_server/views/shoe.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   .row.page-header
     .col-lg-12
-      h1 whitechocolate
+      h1 shoe
 
   .row
     .col-xs-12.col-md-9
@@ -27,4 +27,4 @@ block content
                   
     .col-xs-12.col-sm-3
       p.lead
-        | Embark on a savory adventure with our white chocolate at Wafflepark, where white chocolate flavours offers a tantal promise an unforgettable dining experience.
+        | Embark on a shopping adventure with our website Myntra
